# python_tool_setup

./: LICENSE.txt  README.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/src/aws_utils/: README.md  setup.py
.devcontainer/src/aws_utils/aws_utils.egg-info/: PKG-INFO  SOURCES.txt
.devcontainer/src/aws_utils/package1/: test.py
.devcontainer/src/azure_utils/: setup.py
.devcontainer/src/azure_utils/azure_utils.egg-info/: PKG-INFO  SOURCES.txt
.devcontainer/src/cicd_gitaction/: README.md
.devcontainer/src/cicd_gitaction/template_A/: README.md  ci.yml  release.yml
.devcontainer/src/databrick_etl_framework/: example.py  framework.py
working_setuptool/: pyproject.toml
workingwithPoetry/: pyproject.toml
zen_pipeline/: pyproject.toml
zen_pipeline/src/zen_pipeline/event_based_pipeline/: event_bridge_lambda.py
zen_pipeline/src/zen_pipeline/utils/: s3_client.py
